Removes build folders from gitignore Adds cplz to gitattributes Add build of ExtronXtpEpi

--- a/.gitattributes
+++ b/.gitattributes
@@ -61,6 +61,7 @@
 *.vtp.asv filter=lfs diff=lfs merge=lfs -binary
 *.vsd filter=lfs diff=lfs merge=lfs -binary
 *.clpz filter=lfs diff=lfs merge=lfs -binary
+*.cplz filter=lfs diff=lfs merge=lfs -binary
 
 # Documents
 *.doc  diff=astextplain
