--- a/ExtronXtpEpi/ExtronXtpEpi/ExtronXtpEpi.csproj
+++ b/ExtronXtpEpi/ExtronXtpEpi/ExtronXtpEpi.csproj
@@ -46,18 +46,26 @@
     <GenerateSerializationAssemblies>off</GenerateSerializationAssemblies>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Essentials Devices Common, Version=1.5.6.37561, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\essentials-builds-eng\Essentials Devices Common.dll</HintPath>
+    </Reference>
     <Reference Include="mscorlib" />
-    <Reference Include="PepperDashEssentials, Version=1.4.31.30145, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="PepperDashEssentials, Version=1.5.6.37567, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\EssentialsBuilds\PepperDashEssentials.dll</HintPath>
+      <HintPath>..\..\essentials-builds-eng\PepperDashEssentials.dll</HintPath>
     </Reference>
-    <Reference Include="PepperDash_Core, Version=1.0.31.23583, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="PepperDash_Core, Version=1.0.37.34230, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\EssentialsBuilds\PepperDash_Core.dll</HintPath>
+      <HintPath>..\..\essentials-builds-eng\PepperDash_Core.dll</HintPath>
     </Reference>
-    <Reference Include="PepperDash_Essentials_Core, Version=1.4.31.30136, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="PepperDash_Essentials_Core, Version=1.5.6.37557, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\EssentialsBuilds\PepperDash_Essentials_Core.dll</HintPath>
+      <HintPath>..\..\essentials-builds-eng\PepperDash_Essentials_Core.dll</HintPath>
+    </Reference>
+    <Reference Include="PepperDash_Essentials_DM, Version=1.5.6.37564, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\essentials-builds-eng\PepperDash_Essentials_DM.dll</HintPath>
     </Reference>
     <Reference Include="SimplSharpCustomAttributesInterface, Version=1.0.0.0, Culture=neutral, PublicKeyToken=1099c178b3b54c3b, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -93,6 +101,7 @@
     <Compile Include="ExtronXtpChassis.cs" />
     <Compile Include="ExtronXtpEndpoint.cs" />
     <Compile Include="ExtronXtpInput.cs" />
+    <Compile Include="ExtronXtpJoinMap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <None Include="Properties\ControlSystem.cfg" />
   </ItemGroup>
