--- a/ExtronXtpEpi/ExtronXtpEpi/ExtronXtpEpi.csproj
+++ b/ExtronXtpEpi/ExtronXtpEpi/ExtronXtpEpi.csproj
@@ -46,26 +46,26 @@
     <GenerateSerializationAssemblies>off</GenerateSerializationAssemblies>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Essentials Devices Common, Version=1.5.6.37561, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Essentials Devices Common, Version=1.6.9.27, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\essentials-builds-eng\Essentials Devices Common.dll</HintPath>
+      <HintPath>..\..\Packages\PepperDashEssentials\lib\net35\Essentials Devices Common.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib" />
-    <Reference Include="PepperDashEssentials, Version=1.5.6.37567, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="PepperDashEssentials, Version=1.6.9.35, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\essentials-builds-eng\PepperDashEssentials.dll</HintPath>
+      <HintPath>..\..\Packages\PepperDashEssentials\lib\net35\PepperDashEssentials.dll</HintPath>
     </Reference>
-    <Reference Include="PepperDash_Core, Version=1.0.37.34230, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="PepperDash_Core, Version=1.0.43.36276, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\essentials-builds-eng\PepperDash_Core.dll</HintPath>
+      <HintPath>..\..\Packages\PepperDashEssentials\lib\net35\PepperDash_Core.dll</HintPath>
     </Reference>
-    <Reference Include="PepperDash_Essentials_Core, Version=1.5.6.37557, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="PepperDash_Essentials_Core, Version=1.6.9.22, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\essentials-builds-eng\PepperDash_Essentials_Core.dll</HintPath>
+      <HintPath>..\..\Packages\PepperDashEssentials\lib\net35\PepperDash_Essentials_Core.dll</HintPath>
     </Reference>
-    <Reference Include="PepperDash_Essentials_DM, Version=1.5.6.37564, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="PepperDash_Essentials_DM, Version=1.6.9.31, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\essentials-builds-eng\PepperDash_Essentials_DM.dll</HintPath>
+      <HintPath>..\..\Packages\PepperDashEssentials\lib\net35\PepperDash_Essentials_DM.dll</HintPath>
     </Reference>
     <Reference Include="SimplSharpCustomAttributesInterface, Version=1.0.0.0, Culture=neutral, PublicKeyToken=1099c178b3b54c3b, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
