--- a/.gitattributes
+++ b/.gitattributes
@@ -2,7 +2,6 @@
 # Remove/modify this line if the repository is meant to be open-source
 # *.* filter=git-crypt diff=git-crypt
 # .gitattributes !filter !diff
-
 # These files are text and should be normalized (Convert crlf => lf)
 *.php text
 *.css text
@@ -14,7 +13,6 @@
 *.ini text
 *.inc text
 .htaccess text
-
 # These files are binary and should be left untouched
 # (binary is a macro for -text -diff)
 *.png binary
@@ -32,27 +30,21 @@
 *.zip binary
 *.7z binary
 *.ttf binary
-
-
 # Auto detect text files and perform LF normalization
 # http://davidlaing.com/2012/09/19/customise-your-gitattributes-to-become-a-git-ninja/
 # * text=auto
-
 # The crestron Bits
 *.usp text eol=crlf
 *.ush text eol=crlf
 *.pdtc text eol=crlf
 *.sln text eol=crlf
-
 *.umc binary
 *.lpz binary
 *.sig binary
 *.sm2 binary
-
 *.smw.asv binary
 *.um2 binary
 *.cpz binary
-
 *.sig filter=lfs diff=lfs merge=lfs -binary
 *.smw filter=lfs diff=lfs merge=lfs -binary
 *.vtz filter=lfs diff=lfs merge=lfs -binary
@@ -62,7 +54,6 @@
 *.vtp.asv filter=lfs diff=lfs merge=lfs -binary
 *.vsd filter=lfs diff=lfs merge=lfs -binary
 *.cplz filter=lfs diff=lfs merge=lfs -binary
-
 # Documents
 *.doc  diff=astextplain
 *.DOC  diff=astextplain
@@ -70,7 +61,7 @@
 *.DOCX diff=astextplain
 *.dot  diff=astextplain
 *.DOT  diff=astextplain
-*.pdf  diff=astextplain
+*.pdf filter=lfs diff=lfs merge=lfs -text
 *.PDF  diff=astextplain
 *.rtf  diff=astextplain
 *.RTF  diff=astextplain
