--- a/.gitignore
+++ b/.gitignore
@@ -18,19 +18,18 @@
 mono_crash.*
 
 # Build results
-# [Dd]ebug/
-# [Dd]ebugPublic/
-# [Rr]elease/
-# [Rr]eleases/
-# x64/
-# x86/
-#[Aa][Rr][Mm]/
-#[Aa][Rr][Mm]64/
-#bld/
-#[Bb]in/
-#[Oo]bj/
-#[Ll]og/
-# [Ll]ogs/
+[Dd]ebug/
+[Dd]ebugPublic/
+[Rr]eleases/
+[Rr]elease/
+x64/
+x86/
+[Aa][Rr][Mm]/
+[Aa][Rr][Mm]64/
+bld/
+[Oo]bj/
+[Ll]og/
+[Ll]ogs/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
@@ -128,6 +127,9 @@ _ReSharper*/
 *.[Rr]e[Ss]harper
 *.DotSettings.user
 
+# JustCode is a .NET coding add-in
+.JustCode
+
 # TeamCity is a build add-in
 _TeamCity*
 
@@ -137,9 +139,6 @@ _TeamCity*
 # AxoCover is a Code Coverage Tool
 .axoCover/*
 !.axoCover/settings.json
-
-# Coverlet is a free, cross platform Code Coverage Tool
-coverage*[.json, .xml, .info]
 
 # Visual Studio code coverage results
 *.coverage
@@ -352,3 +351,5 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+*.projectinfo
+*.projectinfo~Stashed changes
