--- a/.github/workflows/essentialsplugins-releasebuilds.yml
+++ b/.github/workflows/essentialsplugins-releasebuilds.yml
@@ -5,7 +5,7 @@ on:
     types:
       - created
     branches:
-      - master
+      - $default-branch
 
 env:
   # Do not edit this, we're just creating it here
@@ -13,7 +13,7 @@ env:
   # Defaults to debug for build type
   BUILD_TYPE: Release
   # Defaults to master as the release branch.  Change as necessary
-  RELEASE_BRANCH: master
+  RELEASE_BRANCH: $default-branch
 jobs:
   Build_Project:
     runs-on: windows-latest
