fix: move initializeInputs/Outputs to customActivate

--- a/src/ExtronXtpEpi/ExtronXtpEpi.csproj
+++ b/src/ExtronXtpEpi/ExtronXtpEpi.csproj
@@ -95,9 +95,7 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ExtronXtpControllerInitiaze.cs" />
-    <Compile Include="ExtronXtpControllerLinkToApi.cs" />
-    <Compile Include="ExtronXtpControllerProcessResponse.cs" />
+    <Compile Include="DebugExt.cs" />
     <Compile Include="ExtronXtpPropertiesConfig.cs" />
     <Compile Include="FeedbackHelpers\BoolWithFeedback.cs" />
     <Compile Include="ExtronXtpController.cs" />
